# Mobile-Robotics-with-AI

./: CosaInstallare.txt  README.md  Robotics Report.docx
CompleteListenerPublisher/: README.txt
CompleteListenerPublisher/completeListenerPublisherNode_ws/src/complete_node/: package.xml  setup.cfg  setup.py
CompleteListenerPublisher/completeListenerPublisherNode_ws/src/complete_node/complete_node/: complete_publisher.py  complete_subscriber.py  complete_subscriber_clean.py
CompleteListenerPublisher/completeListenerPublisherNode_ws/src/td3/scripts/runs/: events.out.tfevents.1717863367.a-virtual-machine.21178.0
LidarImplementation/: README.txt
MASTER_micro_ROS_closedLoopAG/: MASTER_ClosedLoop_Simulink.ino  MASTER_micro_ROS_closedLoopAG.ino
ReinfLearning/: README.txt  replay_buffer.py  test_velodyne_node.py  train_velodyne_node.py
