<?xml version="1.0"?>
<package format="2">
  <name>complete_node</name>
  <version>0.0.0</version>
  <description>A simple laser scan publisher and subscriber</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

